[package]
name = "OLEDShift"
version = "1.1.2"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winresource]
OriginalFilename = "OLEDShift.exe"
FileDescription = "OLEDShift"
ProductName = "OLEDShift"
ProductVersion = "1.1.2"

[build-dependencies]
winresource = "0.1.17"

[dependencies]
lazy_static = "1.4.0"
libloading = "0.8"
native-windows-gui = { version = "1.0.13", features = ["notice", "high-dpi", "number-select"] }
rand = "0.8"
winapi = { version = "0.3", features = ["winuser", "shellapi", "windef", "minwindef", "basetsd", "setupapi", "cfgmgr32", "devguid", "guiddef", "ntdef", "winnt", "winreg", "handleapi"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
windows = { version = "0.62.2", features = ["Storage", "Foundation", "Storage_Search"] }
