[package]
name = "OLEDShift"
version = "1.1.4"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winresource]
OriginalFilename = "OLEDShift.exe"
FileDescription = "OLEDShift"
ProductName = "OLEDShift"
ProductVersion = "1.1.4"

[build-dependencies]
winresource = "0.1.28"

[dependencies]
lazy_static = "1.5.0"
libloading = "0.9"
native-windows-gui = { version = "1.0.13", features = ["notice", "high-dpi", "number-select"] }
rand = "0.9"
winapi = { version = "0.3", features = ["winuser", "shellapi", "windef", "minwindef", "basetsd", "setupapi", "cfgmgr32", "devguid", "guiddef", "ntdef", "winnt", "winreg", "handleapi"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
windows = { version = "0.62.2", features = ["Storage", "Foundation", "Storage_Search"] }
